dynamically_typed_tests/invalid/multiple/became_invalid/multiTypeErrs.wacc
# multiple type mismatches: int <- bool, bool <- char, char <- int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  i = true ;
  b = 'a' ;
  c = 10
end